[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rppal = { version = "0.12.0", features = ["hal","hal-unproven"] }
pcf857x = "0.4.0"
m95320 = "1.0.2"
shared-bus = "0.2.4"
signal-hook = "0.3.9"
rand = "0.8.0"
png = "0.17.0"